# redmine-mcp

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/redmine_mcp/: __main__.py  client.py  errors.py  middleware.py  resources.py  server.py
src/redmine_mcp/tools/: __init__.py  _common.py  attachments.py  enumerations.py  files.py  groups.py  issues.py  journals.py  memberships.py  metadata.py  my_account.py  news.py  projects.py  queries.py  relations.py  roles.py  search.py  time_entries.py  urls.py  users.py  versions.py  wiki.py
tests/: conftest.py  test_client.py  test_middleware.py  test_resources.py  test_server.py  test_tools_attachments.py  test_tools_enumerations.py  test_tools_files.py  test_tools_groups.py  test_tools_issues.py  test_tools_journals.py  test_tools_memberships.py  test_tools_metadata.py  test_tools_my_account.py  test_tools_news.py  test_tools_projects.py  test_tools_queries.py  test_tools_relations.py  test_tools_roles.py  test_tools_search.py  test_tools_time_entries.py  test_tools_urls.py  test_tools_users.py  test_tools_versions.py  test_tools_wiki.py
