[project]
name = "redmine-mcp"
version = "0.1.0"
description = "Stateless MCP server for Redmine. Each request carries the user's own API key."
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kalvad" }]
dependencies = [
    "mcp[cli]==1.27.0",
    "httpx==0.28.1",
    "pydantic==2.13.3",
    "starlette==1.0.0",
    "uvicorn[standard]==0.46.0",
]

[project.scripts]
redmine-mcp = "redmine_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redmine_mcp"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "respx==0.23.1",
    "ruff==0.15.12",
    "mypy==1.20.2",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["redmine_mcp"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redmine_mcp.tools.*"]
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]
