[project]
name = "redmine-mcp"
version = "0.2.5"
description = "Stateless MCP server for Redmine. Each request carries the user's own API key. No database, no shared secret."
requires-python = ">=3.14"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kalvad", email = "hello@kalvad.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "redmine",
    "claude",
    "llm-tools",
    "issue-tracker",
    "project-management",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]==1.27.2",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "starlette==1.3.1",
    "uvicorn[standard]==0.48.0",
]

[project.urls]
Homepage = "https://github.com/KalvadTech/redmine-mcp"
Repository = "https://github.com/KalvadTech/redmine-mcp"
Issues = "https://github.com/KalvadTech/redmine-mcp/issues"
Container = "https://ghcr.io/kalvadtech/redmine-mcp"

[project.scripts]
redmine-mcp = "redmine_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/redmine_mcp"]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "respx==0.23.1",
    "ruff==0.15.15",
    "mypy==2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["redmine_mcp"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redmine_mcp.tools.*"]
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]
